# mlwg-template

./: .gitignore  README.md  pyproject.toml
scripts/: eda.py  infer.py  model.ipynb
src/tickets/: data.py  freezing.py  train.py
tests/: test_data.py
