[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "tickets"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "torch>=2.2,<3",
  "transformers>=4.40,<5",
  "accelerate>=0.26.0",
  "datasets>=2.18,<3",
  "tensorboard>=2.4.1",
  "matplotlib>=3.8,<4",
  "jupyterlab>=4,<5",
  "ipywidgets>=8,<9"
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.9"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"